log
Thu 21 Mar 2024 06:22:28 PM UTC: 
 tests:  1|4
total_score: 10/70
bc81404
Thu 21 Mar 2024 07:17:49 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9dee33e
